# soccernet-reid

./: .gitignore  PLAN_EKSPERYMENTOW.md  pyproject.toml
configs/: config.yaml
configs/backbone/: eb1.yaml  eb2.yaml  r18.yaml  r34.yaml  vgg11_bn.yaml  vgg16_bn.yaml
configs/experiment/: smoke.yaml
configs/head/: bnneck.yaml  classifier_cut.yaml  plain.yaml  projection.yaml
configs/loss/: arc.yaml  ce.yaml  circle.yaml  cont.yaml  ms.yaml  tri.yaml
configs/sampler/: pk.yaml  pk_sa.yaml  random.yaml
configs/transform/: aug-med.yaml  aug-min.yaml  aug-strong.yaml
scripts/: _test_detach.py  build_catalog.py  download_dataset.py  eval_checkpoint.py  launch_bg.py  launch_bg_training.py  smoke_eval.py  train.py
src/soccernet_reid/: transforms.py
src/soccernet_reid/data/: __init__.py  catalog.py  dataset.py  filename_parser.py
src/soccernet_reid/eval/: __init__.py  metrics.py  official.py  ranking.py
src/soccernet_reid/losses/: __init__.py  factory.py
src/soccernet_reid/models/: __init__.py  backbones.py  heads.py  model.py
src/soccernet_reid/samplers/: __init__.py  pk.py
src/soccernet_reid/training/: __init__.py  loop.py  state.py
tests/: test_catalog.py  test_eval_metrics.py  test_eval_official_parity.py  test_eval_ranking.py  test_filename_parser.py  test_heads.py  test_losses.py  test_samplers.py  test_training_loop.py  test_training_pipeline_integration.py  test_transforms.py
