[project]
name = "soccernet-reid"
version = "0.1.0"
description = "SoccerNet player re-identification — master's thesis experiments"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=17.0",
    "pillow>=10.4",
    "numpy>=1.26,<2.3",
    "tqdm>=4.66",
    "SoccerNet>=0.1.60",
]

[project.optional-dependencies]
training = [
    "torch>=2.5",
    "torchvision>=0.20",
    "timm>=1.0.11",
    "pytorch-metric-learning>=2.7",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.18",
    "albumentations>=1.4",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "ipython>=8.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soccernet_reid"]

# --- PyTorch source selection -----------------------------------------------
# Default PyPI wheels for torch on Windows/Linux are CPU-only (Windows) or
# CUDA 12.4 (Linux, post-2.5). To get reproducible CUDA wheels on every
# non-Mac machine we explicitly point uv at PyTorch's `cu124` index. On Mac
# (darwin) we skip this and let uv use the default PyPI wheel which ships
# with MPS support.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
